--- a/Memories/Views/Family/Index.cshtml
+++ b/Memories/Views/Family/Index.cshtml
@@ -1,40 +1,65 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-
-@model IEnumerable<Family>
+﻿@model IEnumerable<Family>
 
 
 <div class="text-center">
     <h1 class="display-4 Family">Family</h1>
 </div>
 
-<div class="container">
+
+<div class="container text-center">
     <div class="row">
-        @foreach(var item in Model)
-{
-    <div class="col-md-4">
-        <div class="card mb-4 box-shadow">
-            <div class="card-body">
-                <img src="@item.Image"/>
-                <h4 class="card-title">@item.FamilyName</h4>
+        @foreach (var item in Model)
+        {
+            <div class="col-md-4">
+                <div class="card mb-4 box-shadow">
+                    <div class="card-body">
+                        <img class="FamilyPhoto" src="@item.Image" />
+                        <a type="btn btn-success" asp-controller="Family" asp-action="Detail" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">@item.FamilyName</a>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-}
+        }
     </div>
 </div>
 
 
 
+@*<div class="container">
+        <div class="row">
+
+            <div class="col-md-4">
+                <div class="card mb-4 box-shadow">
+                    <div class="card-body">
+                        <img class="FamilyPhoto" src="https://i.imgur.com/OpqEbBQ.jpg"/>
+                        <h4 class="card-title">Morgan</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4 box-shadow">
+                    <div class="card-body">
+                        <img class="FamilyPhoto" src="https://i.imgur.com/17Zfj2P.jpg"/>
+                        <h4 class="card-title">Thornton</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4 box-shadow">
+                    <div class="card-body">
+                        <img class="FamilyPhoto" src="https://i.imgur.com/eYa36Fy.jpg"/>
+                        <h4 class="card-title">Townsend</h4>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>*@
 
 
 
 @*<div class="text-center">
-    <h1 class="display-4 Family">Family</h1>
-    <p>
-        <img src="Media/Bettye2.jpg" width="60%" alt="Bettye Morgan"/>
-    </p>
-</div>*@
+        <h1 class="display-4 Family">Family</h1>
+        <p>
+            <img src="Media/Bettye2.jpg" width="60%" alt="Bettye Morgan"/>
+        </p>
+    </div>*@
