--- a/Memories/Views/Family/Detail.cshtml
+++ b/Memories/Views/Family/Detail.cshtml
@@ -1,23 +1,29 @@
-﻿@model Family
+﻿@*@model Family
 
     <h1>Families</h1>
-
-
+<div>
+@foreach (var item in Model) {
 
     <div class="text-center">
-            <h1 class="display-4 Family"> @Model.FamilyMember.FirstName @Model.FamilyMember.LastName </h1>
+            <h1 class="display-4 Family"> @Model.FirstName @Model.LastName </h1>
         </div>
 
 
-    <div class="col-md-4 text-center">
+    }
+</div>*@
+
+
+    @*<div class="col-md-4 text-center">
             <div class="card mb-4 box-shadow">
                 <div class="card-body">
                     <img class="img-fluid" src="@Model.FamilyMember.MemberImage" />
                 </div>
             </div>
-        </div>
+        </div>*@
 
 
-
+@*<div>
+    <h1>@Model.FamilyName</h1>
+</div>*@
 
 
