--- a/Memories/Views/Shared/_Layout.cshtml
+++ b/Memories/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Family" asp-action="Index">Family</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="FamilyMember" asp-action="Index">Members</a>
+                        </li>
                     </ul>
                 </div>
             </div>
