--- a/Memories/Views/FamilyMember/Index.cshtml
+++ b/Memories/Views/FamilyMember/Index.cshtml
@@ -1,20 +1,17 @@
 ﻿@model IEnumerable<FamilyMember>
 
-
 <div class="container">
     <div class="row">
-
         @foreach (var item in Model)
         {
             <div class="col-md-4">
                 <div class="card mb-4 box-shadow">
                     <div class="card-body">
                         <img class="FamilyPhoto" src="@item.MemberImage" />
-                        <h4 class="card-title">@item.FirstName @item.LastName </h4>
+                        <a type="btn btn-success" asp-controller="FamilyMember" asp-action="Detail" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">@item.FirstName @item.LastName </a>
                     </div>
                 </div>
             </div>
         }
-
     </div>
 </div>
