--- a/Memories/Views/Family/Morgan.cshtml
+++ b/Memories/Views/Family/Morgan.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Family>
+﻿@*@model IEnumerable<Family>
 
 <div class="container">
     <div class="row">
@@ -15,7 +15,7 @@
         }
 
     </div>
-</div>
+</div>*@
 
 
 
