--- a/Memories/Views/Family/Create.cshtml
+++ b/Memories/Views/Family/Create.cshtml
@@ -8,14 +8,15 @@
 <form method="post" asp-action="Create">
     <div class="form-group">
         <label asp-for="FamilyName">Family Name</label>
-        <input asp-for="FamilyName" class="form-control" placeholder="Family Name">
+        <input asp-for="FamilyName" class="form-control"/>
         <span asp-validation-for="FamilyName" class="text-danger"></span>
+
     </div>
-   
     <div class="form-group">
         <label asp-for="Image">Image</label>
-        <input asp-for="Image" class="form-control" placeholder="Enter Image URL">
+        <input asp-for="Image" class="form-control"/>
         <span asp-validation-for="Image" class="text-danger"></span>
+
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
