--- a/Memories/Views/Home/Index.cshtml
+++ b/Memories/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="text-center">
     <h1 class="display-4 Family">Memories</h1>
     <p>
-        <img src="Media/Bettye11.jpg" width="60%" alt="Bettye Vacation" />
+        <img src="Media/Pictures/Bettye11.jpg" width="60%" alt="Bettye Vacation" />
     </p>
 
 </div>
