--- a/Memories/Views/FamilyMember/Create.cshtml
+++ b/Memories/Views/FamilyMember/Create.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Memories.Data.Enum
+@using Memories.ViewModels
 
-@model FamilyMember
+@model CreateFamilyMemberViewModel
 
 
 @{
@@ -10,6 +11,7 @@
 
 
 <form method="post" asp-action="Create" enctype="multipart/form-data">
+    <input type="hidden" id="ApplicationUserId" asp-for="ApplicationUserId" />
     <div class="form-group">
         <label asp-for="FirstName">First Name</label>
         <input asp-for="FirstName" class="form-control" placeholder="First Name">
