--- a/Memories/Views/Dashboard/Index.cshtml
+++ b/Memories/Views/Dashboard/Index.cshtml
@@ -55,8 +55,8 @@
                                        class="btn btn-sm btn-outline-secondary">View</a>
                                     @if (SignInManager.IsSignedIn(User))
                                     {
-                                        <a asp-controller="Club" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
-                                        <a asp-controller="Club" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
+                                        <a asp-controller="Family" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
+                                        <a asp-controller="Family" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
                                     }
                                 </div>
                                 <small class="text-muted">@item.FamilyCategory</small>
