--- a/Memories/Views/Family/Index.cshtml
+++ b/Memories/Views/Family/Index.cshtml
@@ -3,6 +3,8 @@
 @if (User.Identity.IsAuthenticated && User.IsInRole("user") || User.IsInRole("admin"))
     {
 
+        <vc:indiv-members/>
+
     <div class="text-center">
         <h1 class="display-4 Family">Family</h1>
     </div>
@@ -21,7 +23,7 @@
                 <div class="card mb-4 box-shadow">
                     <div class="card-body">
                         <img class="FamilyPhoto" src="@item.Image" />
-                        <a type="btn btn-success" asp-controller="FamilyMember" asp-action="Index" class="btn btn-sm btn-outline-secondary">@item.FamilyName</a>
+                        <a type="btn btn-success" asp-controller="Family" asp-action="@item.FamilyName" class="btn btn-sm btn-outline-secondary">@item.FamilyName</a>
 
                         @if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
                             {<a type="button" class="btn btn-sm btn-outline-info" asp-controller="Family" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
