--- a/Memories/Views/Family/Morgan.cshtml
+++ b/Memories/Views/Family/Morgan.cshtml
@@ -1,26 +1,22 @@
-﻿@*@model IEnumerable<Family>
+﻿@model IEnumerable<Family>
 
-<div class="container">
-    <div class="row">
-        @foreach (var item in Model)
-        {
-            <div class="col-md-4">
-                <div class="card mb-4 box-shadow">
-                    <div class="card-body">
-                        <img class="FamilyPhoto" src="@item.FamilyMember.MemberImage" />
-                        <a type="btn btn-success" asp-controller="FamilyMember" asp-action="Detail" asp-route-id="@item.FamilyCategory class="btn btn-sm btn-outline-secondary">@item.FamilyMember.FirstName @item.FamilyMember.LastName </a>
+    <div class="container">
+            <a type="btn btn-success" asp-controller="FamilyMember" asp-action="Create" class="btn AddFamilyButton btn-xlg btn-outline-secondary">+</a>
+        <div class="row">
+            @foreach (var item in Model)
+            {
+                <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                        <div class="card-body">
+                            <img class="FamilyPhoto" src="@item.FamilyMember.MemberImage" />
+                            <a type="btn btn-success" asp-controller="FamilyMember" asp-action="Detail" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">@item.FamilyMember.FirstName @item.FamilyMember.LastName </a>
+                            <a type="button" class="btn btn-sm btn-outline-info" asp-controller="FamilyMember" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+
+                                <a type="button" class="btn btn-sm btn-outline-info" asp-controller="FamilyMember" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                            
+                        </div>
                     </div>
                 </div>
-            </div>
-        }
-
+            }
+        </div>
     </div>
-</div>*@
-
-
-
-
-
-
-
-
