--- a/Memories/Views/FamilyMember/Index.cshtml
+++ b/Memories/Views/FamilyMember/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<FamilyMember>
-@if (User.Identity.IsAuthenticated && User.IsInRole("user"))
+@if (User.Identity.IsAuthenticated && User.IsInRole("user")||User.IsInRole("admin"))
 {
     <div class="container">
         @if (User.Identity.IsAuthenticated && User.IsInRole("user"))
@@ -15,6 +15,11 @@
                         <div class="card-body">
                             <img class="FamilyPhoto" src="@item.MemberImage" />
                             <a type="btn btn-success" asp-controller="FamilyMember" asp-action="Detail" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">@item.FirstName @item.LastName </a>
+                            @if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
+                            {<a type="button" class="btn btn-sm btn-outline-info" asp-controller="FamilyMember" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+
+                                <a type="button" class="btn btn-sm btn-outline-info" asp-controller="FamilyMember" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                            }
                         </div>
                     </div>
                 </div>
