--- a/Memories/Views/Dashboard/Index.cshtml
+++ b/Memories/Views/Dashboard/Index.cshtml
@@ -5,10 +5,13 @@
 
 @model Memories.ViewModels.DashboardViewModel
 
+<div class="container text-center">
+
 <h3 class="display-4 fw-normal">User Dashboard</h3>
-<a type="button" class="btn btn-primary" asp-area="" asp-controller="Family" asp-action="Create">Add a Family</a>
-<a type="button" class="btn btn-primary" asp-area="" asp-controller="FamilyMember" asp-action="Create">Add Family Member</a>
-<a type="button" class="btn btn-primary" asp-area="" asp-controller="Dashboard" asp-action="EditUserProfile">Edit User Profile</a>
+<a type="button" class="btn btn-outline-secondary" asp-area="" asp-controller="Family" asp-action="Create">Add a Family</a>
+<a type="button" class="btn btn-outline-secondary" asp-area="" asp-controller="FamilyMember" asp-action="Create">Add Family Member</a>
+<a type="button" class="btn btn-outline-secondary" asp-area="" asp-controller="Dashboard" asp-action="EditUserProfile">Edit User Profile</a>
+</div>
 <div class="album py-5 bg-light">
     <div class="container text-center">
         <h2 class="display-4 fw-normal">Your Family Members</h2>
@@ -51,7 +54,7 @@
 
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a type="btn btn-success" asp-controller="Club" asp-action="Detail" asp-route-id="@item.Id"
+                                    <a type="btn btn-success" asp-controller="Family" asp-action="Detail" asp-route-id="@item.Id"
                                        class="btn btn-sm btn-outline-secondary">View</a>
                                     @if (SignInManager.IsSignedIn(User))
                                     {
