--- a/Memories/Views/Dashboard/Index.cshtml
+++ b/Memories/Views/Dashboard/Index.cshtml
@@ -14,61 +14,73 @@
 </div>
 <div class="album py-5 bg-light">
     <div class="container text-center">
-        <h2 class="display-4 fw-normal">Your Family Members</h2>
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
-            @foreach (var item in Model.FamilyMembers)
-            {
-                <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                        <img class="FamilyPhoto" src="@item.MemberImage" alt="Card image cap">
-                        <div class="card-body">
-                            <p class="card-text">@item.FirstName @item.LastName</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <a type="btn btn-success" asp-controller="Family" asp-action="Detail" asp-route-id="@item.Id"
-                                       class="btn btn-sm btn-outline-secondary">View</a>
-                                    @if (SignInManager.IsSignedIn(User))
-                                    {
-                                        <a asp-controller="Race" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
-                                        <a asp-controller="Race" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
-                                    }
+        @*@if (Model.FamilyMembers != null)
+            {<h2 class="display-4 fw-normal">Your Family Members</h2>
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                
+              
+
+
+                    @foreach (var item in Model.FamilyMembers)
+                        {
+                        <div class="col-md-4">
+                            <div class="card mb-4 box-shadow">
+                                <img class="FamilyPhoto" src="@item.MemberImage" alt="Card image cap">
+                                <div class="card-body">
+                                    <p class="card-text">@item.FirstName @item.LastName</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="btn-group">
+                                            <a type="btn btn-success" asp-controller="Family" asp-action="Detail" asp-route-id="@item.Id"
+                                               class="btn btn-sm btn-outline-secondary">View</a>
+                                            @if (SignInManager.IsSignedIn(User))
+                                                {
+                                                <a asp-controller="Race" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
+                                                <a asp-controller="Race" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
+                                                }
+                                        </div>
+                                        <small class="text-muted">@item.FamilyCategory</small>
+                                    </div>
                                 </div>
-                                <small class="text-muted">@item.FamilyCategory</small>
                             </div>
                         </div>
-                    </div>
-                </div>
-            }
-        </div>
-        <h2 class="display-4 fw-normal">Your Families</h2>
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            @foreach (var item in Model.Families)
-            {
-                <div class="col-md-4 text-center">
-                    <div class="card mb-4 box-shadow">
-                        <img class=" FamilyPhoto" src="@item.Image" alt="Card image cap">
-                        <div class="card-body">
-                            <p class="card-text">@item.FamilyName</p>
-                            @*<p class="card-text">@item.Description</p>*@
+                        }
 
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <a type="btn btn-success" asp-controller="Family" asp-action="Detail" asp-route-id="@item.Id"
-                                       class="btn btn-sm btn-outline-secondary">View</a>
-                                    @if (SignInManager.IsSignedIn(User))
-                                    {
-                                        <a asp-controller="Family" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
-                                        <a asp-controller="Family" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
-                                    }
+
+
+                    </div>
+            }*@
+
+
+
+                    <h2 class="display-4 fw-normal">Your Families</h2>
+                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                    @foreach (var item in Model.Families)
+                    {
+                        <div class="col-md-4 text-center">
+                            <div class="card mb-4 box-shadow">
+                                <img class=" FamilyPhoto" src="@item.Image" alt="Card image cap">
+                                <div class="card-body">
+                                    <p class="card-text">@item.FamilyName</p>
+                                    @*<p class="card-text">@item.Description</p>*@
+
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="btn-group">
+                                            <a type="btn btn-success" asp-controller="Family" asp-action="Detail" asp-route-id="@item.Id"
+                                               class="btn btn-sm btn-outline-secondary">View</a>
+                                            @if (SignInManager.IsSignedIn(User))
+                                            {
+                                                <a asp-controller="Family" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
+                                                <a asp-controller="Family" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
+                                            }
+                                        </div>
+                                        <small class="text-muted">@item.FamilyCategory </small>
+                                    </div>
                                 </div>
-                                <small class="text-muted">@item.FamilyCategory</small>
                             </div>
                         </div>
-                    </div>
-                </div>
-            }
-        </div>
+                    }
+                 </div>
 
-    </div>
-</div>
+            </div>
+        </div>
