--- a/Memories/Views/FamilyMember/Index.cshtml
+++ b/Memories/Views/FamilyMember/Index.cshtml
@@ -1,7 +1,11 @@
 ﻿@model IEnumerable<FamilyMember>
-@if (User.Identity.IsAuthenticated && User.IsInRole("user")||User.IsInRole("admin"))
+@if (User.Identity.IsAuthenticated && User.IsInRole("user") || User.IsInRole("admin"))
 {
-    <div class="container">
+    <div class="text-center">
+        <h1 class="display-4 Family"> My Family</h1>
+    </div>
+
+    <div class="container text-center">
         @if (User.Identity.IsAuthenticated && User.IsInRole("user"))
         {
             <a type="btn btn-success" asp-controller="FamilyMember" asp-action="Create" class="btn AddFamilyButton btn-xlg btn-outline-secondary">+</a>
