--- a/Memories/Views/Townsend/Index.cshtml
+++ b/Memories/Views/Townsend/Index.cshtml
@@ -1,11 +1,8 @@
-﻿@using Memories.Models
-
-@model IEnumerable<FamilyMember>
-
+﻿@model IEnumerable<FamilyMember>
 @if (User.Identity.IsAuthenticated && User.IsInRole("user") || User.IsInRole("admin"))
 {
     <div class="text-center">
-        <h1 class="display-4 Family"> The Morgans </h1>
+        <h1 class="display-4 Family"> The Townsends </h1>
     </div>
 
     <div class="container text-center">
@@ -17,17 +14,17 @@
         <div class="row">
             @foreach (var item in Model)
 
-                @if (item.LastName == "Morgan")
+                @if (item.LastName == "Townsend")
                 {
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow">
                             <div class="card-body">
                                 <img class="FamilyPhoto" src="@item.MemberImage" />
-                                <a type="btn btn-success" asp-controller="Morgan" asp-action="Detail" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">@item.FirstName @item.LastName </a>
+                                <a type="btn btn-success" asp-controller="Townsend" asp-action="Detail" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">@item.FirstName @item.LastName </a>
                                 @if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
-                                {<a type="button" class="btn btn-sm btn-outline-info" asp-controller="Morgan" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                                {<a type="button" class="btn btn-sm btn-outline-info" asp-controller="Townsend" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
 
-                                    <a type="button" class="btn btn-sm btn-outline-info" asp-controller="Morgan" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                                    <a type="button" class="btn btn-sm btn-outline-info" asp-controller="Townsend" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                                 }
                             </div>
                         </div>
