--- a/Memories/Views/Home/Privacy.cshtml
+++ b/Memories/Views/Home/Privacy.cshtml
@@ -1,7 +1,13 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Tyler";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<div class="text-center">
+    <h1 class="display-4 Family">Bettye's Memories</h1>
+    <br/>
+    <p>
+        <img src="https://i.imgur.com/05jgOLt.jpg" width="60%" alt="Bettye Vacation" />
+    </p>
+
+</div>
 
